# aw_x6g2c

./: CHANGELOG.rst  package.json  readme.md
aworks_awtk_imx6ul/: CHANGELOG.rst  (+2 more)
aworks_sdk/source/bsp/imx6ul/: CMakeLists.txt  SConscript  aw_bsp_adc.h  aw_bsp_assert.c  aw_bsp_gpio.h  aw_bsp_mem.c  aw_bsp_mem.h  aw_check.h  sys_lib.c
aworks_sdk/source/bsp/imx6ul/arm-none-eabi-gcc/: startup.S  sys_reset_imx6ul_gcc.S
aworks_sdk/source/cpu/imx6ul/: CMakeLists.txt  SConscript  imx6ul_sdk_version.defconf  imx6ul_sdk_version.h.pyconfig
aworks_sdk/source/cpu/imx6ul/include/: aw_cpu_clk.h  aw_imx6ul_caam.h  aw_sdk_version.h  awbl_bsp_driver_if.h  imx6ul_barrier.h  imx6ul_ccm_analog_regs.h  imx6ul_ccm_regs.h  imx6ul_gpio_pin.h  imx6ul_inum.h  imx6ul_iomuxc_regs.h  imx6ul_pmu_regs.h  imx6ul_pwmid.h  imx6ul_regs_base.h  imx6ul_sdma_events.h  imx6ul_sound_wav.h
aworks_sdk/source/cpu/imx6ul/include/driver/adc/: awbl_imx6ul_adc.h
aworks_sdk/source/cpu/imx6ul/include/driver/busctlr/: awbl_imx6ul_gpmi.h
aworks_sdk/source/cpu/imx6ul/include/driver/caam/: awbl_imx6ul_caam.h
aworks_sdk/source/cpu/imx6ul/include/driver/camera/: awbl_imx6ul_csi.h
aworks_sdk/source/cpu/imx6ul/include/driver/can/: awbl_imx6ul_can.h
aworks_sdk/source/cpu/imx6ul/include/driver/display/: awbl_mxs_fb.h  awbl_mxs_hw480272f.h  awbl_mxs_lcdif.h  awbl_mxs_lcdif_regs.h  awbl_mxs_tft_panel.h
aworks_sdk/source/cpu/imx6ul/include/driver/dma/: aw_imx6ul_sdma.h  awbl_imx6ul_dma.h  awbl_imx6ul_sdma.h  awbl_imx6ul_sdma_service.h
aworks_sdk/source/cpu/imx6ul/include/driver/eim/: awbl_imx6ul_eim.h  imx6ul_eim_regs.h
aworks_sdk/source/cpu/imx6ul/include/driver/gpio/: awbl_imx6ul_gpio.h  awbl_imx6ul_gpio_private.h
aworks_sdk/source/cpu/imx6ul/include/driver/i2c/: awbl_imx6ul_i2c.h
aworks_sdk/source/cpu/imx6ul/include/driver/intctlr/: awbl_imx6ul_intc.h
aworks_sdk/source/cpu/imx6ul/include/driver/mqs/: awbl_imx6ul_mqs.h
aworks_sdk/source/cpu/imx6ul/include/driver/nand/: awbl_imx6ul_nand.h
aworks_sdk/source/cpu/imx6ul/include/driver/net/: awbl_imx6ul_enet.h  imx6ul_enet_regs.h
aworks_sdk/source/cpu/imx6ul/include/driver/nvram/: awbl_imx6ul_ocotp.h
aworks_sdk/source/cpu/imx6ul/include/driver/pwm/: awbl_imx6ul_pwm.h
aworks_sdk/source/cpu/imx6ul/include/driver/sai/: awbl_imx6ul_sai.h
aworks_sdk/source/cpu/imx6ul/include/driver/sdio/: awbl_imx6ul_sdio.h
aworks_sdk/source/cpu/imx6ul/include/driver/serial/: awbl_imx6ul_uart.h
aworks_sdk/source/cpu/imx6ul/include/driver/sim/: awbl_imx6ul_sim.h  awbl_sim.h
aworks_sdk/source/cpu/imx6ul/include/driver/spi/: awbl_imx6ul_ecspi.h  awbl_imx6ul_qspi.h  awbl_imx6ul_qspi_op.h
aworks_sdk/source/cpu/imx6ul/include/driver/tempmon/: awbl_imx6ul_tempmon.h
aworks_sdk/source/cpu/imx6ul/include/driver/timer/: awbl_imx6ul_gptimer.h  awbl_imx6ul_timer.h
aworks_sdk/source/cpu/imx6ul/include/driver/timestamp/: awbl_imx6ul_timestamp.h
aworks_sdk/source/cpu/imx6ul/include/driver/usb/: awbl_imx6ul_usbd.h  awbl_imx6ul_usbh.h
aworks_sdk/source/cpu/imx6ul/include/driver/wdt/: awbl_imx6ul_wdt.h
aworks_sdk/source/cpu/imx6ul/include_notinsdk/: imx6ul_ocotp_helper.h
aworks_sdk/source/cpu/imx6ul/source/: aw_atomic.c  aw_sdk_version.c  imx6ul_clock.c  imx6ul_cpu_idle.S  imx6ul_iomuxc_regs.c  imx6ul_power.c  imx6ul_sound_wav.c  imx6ul_sys_timer.c  imx_clk.h  imx_clk_busy.c  imx_clk_enet_tx_clk_ref.c  imx_clk_gate2.c  imx_clk_pfd.c  imx_clk_pllv3.c  stream.c
aworks_sdk/source/cpu/imx6ul/source/driver/adc/: awbl_imx6ul_adc.c
aworks_sdk/source/cpu/imx6ul/source/driver/busctlr/: awbl_imx6ul_gpmi.c  imx6ul_gpmi_regs.h
aworks_sdk/source/cpu/imx6ul/source/driver/caam/: aw_caam_internal.h  aw_imx6ul_caam.c  awbl_imx6ul_caam.c  caam_ctrl.c  caam_func.c  caam_func.h  caam_internal.h  caam_jr.c  caam_sm.h  caam_sm_store.c  desc.h  desc_constr.h  imx6ul_caam_regs.h
aworks_sdk/source/cpu/imx6ul/source/driver/camera/: awbl_imx6ul_csi.c
aworks_sdk/source/cpu/imx6ul/source/driver/can/: awbl_imx6ul_can.c
aworks_sdk/source/cpu/imx6ul/source/driver/display/: awbl_mxs_fb.c  awbl_mxs_lcdif.c  awbl_mxs_method.c  awbl_mxs_tft_panel.c
aworks_sdk/source/cpu/imx6ul/source/driver/dma/: aw_imx6ul_sdma_fw.c  awbl_imx6ul_dma.c  awbl_imx6ul_sdma.c  awbl_imx6ul_sdma_internal.h  awbl_imx6ul_sdma_service.c
aworks_sdk/source/cpu/imx6ul/source/driver/eim/: awbl_imx6ul_eim.c
aworks_sdk/source/cpu/imx6ul/source/driver/gpio/: awbl_imx6ul_gpio.c  imx6ul_pin_cfg_map.c  imx6ul_pin_cfg_map.h
aworks_sdk/source/cpu/imx6ul/source/driver/i2c/: Readme.txt  awbl_imx6ul_i2c.c
aworks_sdk/source/cpu/imx6ul/source/driver/intctlr/: awbl_imx6ul_intc.c  gic.c  gic.h  gic_registers.h  interrupt.c
aworks_sdk/source/cpu/imx6ul/source/driver/mqs/: awbl_imx6ul_mqs.c
aworks_sdk/source/cpu/imx6ul/source/driver/nand/: awbl_imx6ul_nand.c
(+476 files in other folders)
